# datapact

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  bundle-test.py  example.ipynb  example.py  renovate.json  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  docker.yml  paper.yml  pre-commit.yml  pytest.yml  release-please.yml  test-track.yml  test.yml
dashboard/: .env  README.md  docker-entrypoint.sh  package-lock.json  package.json  tsconfig.json
dashboard/app/: blitz-client.ts
dashboard/app/auth/: validations.ts
dashboard/app/components/: PageTitle.tsx
dashboard/app/datasets/: permissions.ts
dashboard/app/expectations/: BeNormal.tsx  ExpectationVisualiser.ts  index.ts
dashboard/app/layout/: Shell.tsx
dashboard/db/: schema.prisma  seeds.js
dashboard/integrations/: email.ts
dashboard/mailers/: util.ts  warningMailer.ts
dashboard/pages/: _app.tsx  index.tsx  settings.tsx
dashboard/pages/[organisation]/: index.tsx
dashboard/pages/auth/: forgot-password.tsx  login.tsx
dashboard/visualizer/: html_entrypoint.tsx  index.tsx
dashboard/visualizer/expectations/: BeNormal.tsx
datafox/: __init__.py  datafox.py  example.py  example_test.py  schema.py
datafox/expectations/: BeBetween.py  BeNormal.py  ExpectationProtocol.py  NotBeNull.py  __init__.py
datafox/schema/: dataprofile.json  expectation.json  testrun.json
datapact/: __init__.py  contrived.csv  datapact.py  datapact_test.py  example_test.py  fixture_test.py  schema.py  upload_test.py
datapact/javascript/: .gitignore
datapact/util/: github.py  github_test.py  session_fingerprint.py  session_fingerprint_test.py
doc/: .gitignore  api.rst  comparison.md  conf.py  contents.rst  expectations.rst  getting_started.rst  index.rst  track.rst  tutorial.rst
doc/_static/: github_link.js  hypothesis.js  logo_link.js
doc/reference/: dashboard.rst  expectations.rst  general_functions.rst  index.rst
documentation/: .eleventy.js  .gitignore  package-lock.json  package.json
documentation/_data/: expectations.js  site.json
documentation/_includes/components/: footer.njk  header.njk
documentation/_includes/layouts/: page.njk
documentation/_tmp/: style.css
documentation/content/pages/: home.md
expact/: __init__.py  example_test.py  expact.py
paper/: paper.bib  paper.md
track/: .env  .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json
track/app/: blitz-client.ts  blitz-server.ts
track/app/components/: PageTitle.tsx
track/app/expectations/: index.ts
track/app/layout/: Shell.tsx
track/app/testruns/: index.ts
track/db/: schema.prisma  seeds.js
track/integrations/: email.ts
track/mailers/: forgotPasswordMailer.ts  notificationSetupMailer.ts  util.ts  warningMailer.ts
track/pages/: _app.tsx  index.tsx  settings.tsx
track/pages/[organisation]/: index.tsx
track/pages/auth/: login.tsx  signup.tsx
track/result_visualiser/: entrypoint.tsx  index.tsx
track/result_visualiser/visualisers/: BinDistribution.tsx  ExpectationVisualiser.ts  be_normal.tsx  be_normal_distributed.tsx  index.ts
(+41 files in other folders)
