[metadata]
name = expact
version = 0.0.3
license = MIT
author = Simon Knott
author_email = expact@simonknott.de
description = "improve how we work with evolving data"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = "expact, data, test, dataframe, pandas"
url = https://github.com/skn0tt/expact
project_urls =
    Bug Tracker = https://github.com/skn0tt/expact/issues
    Discussions = https://github.com/skn0tt/expact/discussions
    Changelog = https://github.com/skn0tt/expact/releases
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Information Analysis

[options]
python_requires = >=3.5
package_dir =
    = expact
install_requires =
    pandas
    scipy
    dataclasses_json
