[metadata]
name = datapact
version = 0.3.2
license = MIT
author = Simon Knott
author_email = datapact@simonknott.de
description = "improve how we work with evolving data"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = "datapact, data, test, dataframe, pandas"
url = https://github.com/skn0tt/datapact
project_urls =
    Bug Tracker = https://github.com/skn0tt/datapact/issues
    Discussions = https://github.com/skn0tt/datapact/discussions
    Changelog = https://github.com/skn0tt/datapact/releases
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Information Analysis

[options]
python_requires = >=3.5
package_dir =
    = datapact
install_requires =
    pandas
    scipy
    dataclasses_json
    requests
